--- a/authentication-lab/templates/signin.html
+++ b/authentication-lab/templates/signin.html
@@ -39,5 +39,6 @@
     </form>
     <br>
     <a href="/signup"><button>signup</button></a>
+    <a href="/signout"><button>signout</button></a>
 </body>
 </html>
