--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -39,5 +39,7 @@
     </form>
     <br>
     <a href="/"><button>signin</button></a>
+    <a href="/signout"><button>signout</button></a>
+
 </body>
 </html>
