--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -18,6 +18,13 @@
 
         <!-- Email -->
         <div>
+            <label>Full Name*</label>
+            <div class="input-group">
+                <input type="name"  name="Full Name">
+            </div>
+        </div>
+        
+        <div>
             <label>Email address*</label>
             <div>
                 <input type="email"  name="email" id="emailStr" required>
@@ -32,6 +39,22 @@
             </div>
         </div>
         
+        <div>
+            <label>Username*</label>
+            <div class="input-group">
+                <input type="text"  name="Username">
+            </div>
+        </div>
+        
+        <div>
+            <label>Bio*</label>
+            <div class="input-group">
+                <input type="text"  name="Bio" maxlength="280">
+            </div>
+        </div>
+        
+
+
         <!-- Button -->
         <div>
             <input type="submit"/>
